fixe item jumping on rename

--- a/finder.css
+++ b/finder.css
@@ -50,7 +50,8 @@
 
     .ctn-bro li.of-item {
         text-align: center;
-        display: inline-block;
+        display: block;
+        float: left;
         margin: 10px 5px 20px;
         width: 100px;
         height: 80px;
